--- a/T1_django/Mcloud4/app/templates/app/fitting_input.html
+++ b/T1_django/Mcloud4/app/templates/app/fitting_input.html
@@ -11,7 +11,7 @@
                 <h4>Fill in TI and SI to calculate T1</h4>
                 <hr />
                 <div class="form-group">
-                    <label for="t_value" class="col-md-2 control-label">Times</label>
+                    <label for="t_value" class="col-md-2 control-label">Times test</label>
                     <div class="col-md-10" >
                         {{ form.t_value }}
                     </div>
