--- a/T1_django/Mcloud4/app/templates/app/boston_result.html
+++ b/T1_django/Mcloud4/app/templates/app/boston_result.html
@@ -4,7 +4,7 @@
 
 <div class="bs-callout bs-callout-primary">{{ HTML_text1 | safe}}</div>
 
-<div class="bs-callout bs-callout-primary"><h4>Interactive Plot</h4>{{ highchart | safe}} </div>
+<div class="bs-callout bs-callout-primary"><h4>Interactive Plot</h4>{{ plot1 | safe}} </div>
 
 <div class="bs-callout bs-callout-primary"><h4>Paper-style Plot</h4>{{ plot2 | safe}} </div>
 
