--- a/T1_django/Mcloud4/app/templates/app/fitting_input1.html
+++ b/T1_django/Mcloud4/app/templates/app/fitting_input1.html
@@ -66,7 +66,7 @@
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
                         <input type="hidden" name="next" value="/" />
-                        <input type="submit" value="Calculate" class="btn btn-default" />
+                        <input type="submit" value="Submit" class="btn btn-default" />
                     </div>
                 </div>
                 {% if form.errors %}
@@ -91,15 +91,15 @@ Simply copy the following test data into the input boxes and click submit.
 
 Test data:
 <p>
-
-TI= 120 220 370 1130 1168 1233 2115 2125 2145 3078 4035
-<p>
-SI= 114 87 56 75 80 89 137 132 128 151 168
-<p>
-
+['CRIM' 'ZN' 'INDUS' 'CHAS' 'NOX' 'RM' 'AGE' 'DIS' 'RAD' 'TAX' 'PTRATIO' 'B' 'LSTAT']
 
 <p>
-Provided by Yi-Fu Tsai & Teng-Yi Huang
+[0.00632, 18, 2.31 ,0 ,0.538 ,6.575, 65.2, 4.09, 1, 296, 15.3, 396.9, 4.98]
+<p>
+
+
+<p>
+Provided by Yun-Wen Wang & Teng-Yi Huang
 {% endblock %}
 
 
