--- a/T1_django/Mcloud4/app/templates/app/layout.html
+++ b/T1_django/Mcloud4/app/templates/app/layout.html
@@ -37,10 +37,18 @@
                     <li><a href="{% url 'home' %}">Home</a></li>
                     <li><a href="{% url 'about' %}">About</a></li>
                     <li><a href="{% url 'contact' %}">Contact</a></li>
-                    <li><a href="{% url 'T1LL_input' %}">T1 (Look-Locker)</a></li>
+<!--                <li><a href="{% url 'T1LL_input' %}">T1 (Look-Locker)</a></li>
                     <li><a href="{% url 'Boston_fit' %}">Boston</a></li>
-
+-->
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-    haspopup="true" aria-expanded="false">Calculation <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="{% url 'T1LL_input' %}">T1 (Look-Locker)</a></li>
+                            <li><a href="{% url 'Boston_fit' %}">Boston</a></li>
+                        </ul>
+                    </li>
                 </ul>
+
                 {% include 'app/loginpartial.html' %}
             </div>
         </div>
